# jupyter_rfb

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  jupyter_rfb.json  jupyterfb.json  pyproject.toml  release.py  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  pypi-publish
binder/: environment.yml
docs/: conf.py  contributing.rst  docs_requirements.txt  events.rst  guide.rst  index.rst  mkdocs.yml  reference.rst  widget.rst
docs/_build/doctrees/: environment.pickle  guide.doctree  index.doctree  reference.doctree
docs/_build/doctrees/examples/: drawing1.doctree  hello_world.doctree  index.doctree  performance.doctree  push.doctree  video.doctree  vispy.doctree  wgpu.doctree
docs/_build/doctrees/nbsphinx/examples/: drawing1.ipynb  video.ipynb
docs/_build/html/: .buildinfo  genindex.html  guide.html  index.html  objects.inv  reference.html  search.html  searchindex.js
docs/_build/html/_sources/: reference.rst.txt
docs/_build/html/_sources/examples/: hello_world.ipynb.txt
docs/_build/html/examples/: drawing1.html  hello_world.html  index.html  performance.html  push.html  video.html  vispy.html  wgpu.html
docs/docs/: example.ipynb  guide.md  index.md  ref.md
docs/examples/: index.rst
examples/: drawing1.ipynb  grid.ipynb  hello_world.ipynb  interaction1.ipynb  interaction2.ipynb  ipywidgets_embed.ipynb  performance.ipynb  push.ipynb  pygfx1.ipynb  pygfx2.ipynb  pygfx3.ipynb  video.ipynb  visibility_check.ipynb  vispy.ipynb  vispy1.ipynb  wgpu.ipynb  wgpu1.ipynb
js/: .eslintrc.json  README.md  package-lock.json  package.json  webpack.config.js
js/lib/: extension.js  index.js  labplugin.js  widget.js
jupyter_rfb/: __init__.py  _colab.py  _jpg.py  _png.py  _utils.py  _version.py  events.py  example.py  renderview-afm.js  renderview-rfb.js  renderview.css  renderview.js  widget.py
jupyter_rfb/static/: widget.js
jupyterfb/: __init__.py  _png.py  _version.py  widget.py
tests/: test_framesender.py  test_jpg.py  test_png.py  test_utils.py  test_widget.py
