# -- Project info

[project]
dynamic = ["version"]
name = "jupyter-rfb"
description = "Remote Frame Buffer for Jupyter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Almar Klein" }]
keywords = [
    "anywidget",
    "notebook",
    "remote frame buffer",
    "canvas",
    "visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "anywidget",
    "numpy",
    "simplejpeg; implementation_name != 'pypy'",
]
[project.optional-dependencies]
build = ["build", "flit", "twine"]
lint = ["ruff", "pre-commit"]
tests = ["pytest"]
docs = ["numpy", "anywidget", "sphinx", "nbsphinx"]
dev = ["jupyter_rfb[build,lint,tests,docs]"]

[project.urls]
Homepage = "https://github.com/vispy/jupyter_rfb"
Documentation = "https://jupyter-rfb.readthedocs.io/en/stable/"
Repository = "https://github.com/vispy/jupyter_rfb"


# --- Build system

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# --- Tooling

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "N", "B", "RUF"]
ignore = [
    "E501",   # Line too long
    "E731",   # Do not assign a `lambda` expression, use a `def`
    "RUF006", # Store a reference to the return value of `loop.create_task`
]


[tool.coverage.report]
exclude_also = [
    # Have to re-enable the standard pragma, plus a less-ugly flavor
    "pragma: no cover",
    "no-cover",
    "raise NotImplementedError",
]
